logs/python-clickatell.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clickatell'...
Compiling './lib/python3.5/site-packages/clickatell/api.py'...
***   File "./lib/python3.5/site-packages/clickatell/api.py", line 36
    raise ClickatellError, "No batch_id set"
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clickatell/tests'...
Compiling './lib/python3.5/site-packages/clickatell/tests/mock.py'...
***   File "./lib/python3.5/site-packages/clickatell/tests/mock.py", line 31
    raise ClickatellError, 'No matching mocked data matches %s, %s, %s, %s' \
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clickatell/utils.py'...
***   File "./lib/python3.5/site-packages/clickatell/utils.py", line 13
    raise ClickatellError, 'No dispatcher available for %s' % command
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clickatell/validators.py'...
***   File "./lib/python3.5/site-packages/clickatell/validators.py", line 10
    raise ClickatellError, "SMS messages need to be sent in the " \
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_clickatell-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
